# depeche

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: python-package.yml
docs/: api.md  index.md
src/depeche/: __about__.py  __init__.py  core.py
src/rsvp/: __init__.py  core.py  types.py
tests/: test_dispatcher.py
