[build-system]
requires = ["flit_scm>=1.7,<2.0"]
build-backend = "flit_scm:buildapi"


[project]
name = "depeche"
authors = [{name = "tom65536", email = "peregrinus@planet.ms"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python=">=3.10"

[project.urls]
Home = "https://github.com/tom65536/depeche"

[project.optional-dependencies]
test = [
   "pytest>=8.4,<9.0",
   "pytest-cov>=6.2,<7.0",
   "pytest-asyncio>=1.1,<2.0"
]

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
write_to = "src/depeche/__about___.py"
version_file = "src/depeche/__about__.py"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=depeche --cov-report=term-missing"
testpaths = ["tests"]
