[build-system]
requires = ["flit_scm>=1.7,<2.0"]
build-backend = "flit_scm:buildapi"


[project]
name = "depeche"
authors = [{name = "tom65536", email = "peregrinus@planet.ms"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
classifiers = [
   "Development Status :: 3 - Alpha",
   "Framework :: AsyncIO",
   "Framework :: Pydantic :: 2",
   "Framework :: aiohttp",
   "Intended Audience :: Developers",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Topic :: System :: Distributed Computing",
   "Typing :: Typed"
]
requires-python=">=3.11"

[project.urls]
Home = "https://github.com/tom65536/depeche"

[project.optional-dependencies]
test = [
   "pytest>=8.4,<9.0",
   "pytest-cov>=6.2,<7.0",
   "pytest-asyncio>=1.1,<2.0"
]
type = [
   "pyright>=1.1.14,<2.0"
]

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
version_file = "src/depeche/__about__.py"
relative_to = "pyproject.toml"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=depeche --cov-report=term-missing"
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]

[tool.ruff]
line-length = 120
indent-width = 3

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
